# spot_bag

./: CMakeLists.txt  package.xml
config/: spot.rviz
launch/: bag_all.launch  bag_sidewalk.launch  bag_sidewalk_wo_cam.launch  play_all.launch  play_all_imageview.launch  spot_driver_aau.launch  view_rviz.launch
launch/play_bags/: play_bag_2021-03-25-09-49-57.launch
