<?xml version="1.0"?>
<package format="2">
  <name>spot_bag</name>
  <version>0.0.0</version>
  <description>Record ROS bags from the Spot robot</description>

  <maintainer email="kdh@es.aau.dk">Karl D. Hansen</maintainer>

  <license>MIT</license>

  <author email="kdh@es.aau.dk">Karl D. Hansen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
